--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 
       <div class="container flex">
         <div class="dice">
-          <p>Player 1</p>
+          <p class="player-one-name"></p>
           <img class="img1" src="">
         </div>
   
         <div class="dice">
-          <p>Player 2</p>
+          <p class="player-two-name"></p>
           <img class="img2" src="">
         </div>
       </div>
